system/gatekeeper/tests/gatekeeper-policies/fixtures/forbidden-clusterwide-objects/cert-manager-mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from-secret: kube-system/kube-system-metal-cert-manager-webhook-ca
    meta.helm.sh/release-name: kube-system-metal
    meta.helm.sh/release-namespace: kube-system
  labels:
    app: webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: kube-system-metal
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: webhook
    app.kubernetes.io/version: v1.5.5
    helm.sh/chart: cert-manager-v1.5.5
    ccloud/support-group: foo-group
    ccloud/service: dummy
  name: kube-system-metal-cert-manager-webhook
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: kube-system-metal-cert-manager-webhook
      namespace: kube-system
      path: /mutate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: webhook.cert-manager.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - cert-manager.io
    - acme.cert-manager.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*/*'
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
