system/gatekeeper/tests/gatekeeper-policies/response-config.yaml
keppel.example.com/vulnerability:clean@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: Clean
keppel.example.com/vulnerability:low@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: Low
keppel.example.com/vulnerability:medium@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: Medium
keppel.example.com/vulnerability:high@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  X-Keppel-Max-Layer-Created-At: "-1h"
  X-Keppel-Min-Layer-Created-At: "-1h"
  X-Keppel-Vulnerability-Status: High
keppel.example.com/vulnerability:old@sha256:0000000000000000000000000000000000000000000000000000000000000000:
  # older than slightly over a year (~13 months)
  X-Keppel-Max-Layer-Created-At: "-10000h"
  X-Keppel-Min-Layer-Created-At: "-10000h"
